--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -749,7 +749,7 @@ foo false = true
 Then Agda highlights the definition and gives us an error:
 \begin{verbatim}
 Incomplete pattern matching for foo. Missing cases:
-  foo False
+  foo false
 when checking the definition of foo
 \end{verbatim}
 
