Fix "correcness" typo

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -2843,7 +2843,7 @@ pattern matching, and proofs by induction as functions that call
 themselves recursively on smaller arguments.
   \item Equational reasoning can be used to prove many properties of
 functional programs. In particular, we can use it to prove typeclass
-laws for specific instances, to verify the correcness of
+laws for specific instances, to verify the correctness of
 optimizations, and to prove compiler correctness.
 \end{itemize}
 
