Update apt package (agda instead of agda-mode)

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -239,7 +239,7 @@ version 2.6.0 or later. There are several ways to install Agda.
     (including
     WSL\footnote{\hrefu{https://docs.microsoft.com/en-us/windows/wsl/install-win10}{docs.microsoft.com/en-us/windows/wsl/install-win10}}
     on Windows) you can install a binary release of Agda by running
-    `\texttt{sudo apt install agda-mode}`.
+    `\texttt{sudo apt install agda}` (plus `sudo apt install elpa-agda2-mode` if you use Emacs).
 
   \item[Installation from source using Cabal or Stack.] You can also
     install Agda from source using Cabal or Stack.\footnote{These
