Fix positioning of marginnote on parameters vs indices

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -955,7 +955,7 @@ module ThrowAwayVec where
   infixr 5 _::_
 \end{code}
 %
-\marginnote{%
+\marginnote[-3cm]{%
 \paragraph{Parameters vs.~indices.}
 You might wonder why the argument $(A : \ty{})$ appears \emph{before}
 the colon in the definition of $\Vec$, while the argument type $\Nat$
